--- a/nieuwe.html
+++ b/nieuwe.html
@@ -3,12 +3,12 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+  <h1>wow a title!</h1>
 
   {{> hello}}
 </body>
 
 <template name="hello">
   <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+  <p>You've pressed the button {{commits}} times.</p>
 </template>
